// Copyright (c) 2025 IoTeX
// This source code is provided 'as is' and no warranties are given as to title or non-infringement, merchantability
// or fitness for purpose and, to the extent permitted by law, all liability for your use of the code is disclaimed.
// This source code is governed by Apache License 2.0 that can be found in the LICENSE file.

// To compile the proto, run:
//      protoc --go_out=. --go-grpc_out=. *.proto
syntax = "proto3";
package stakingindexpb;
option go_package = "github.com/iotexproject/iotex-core/v2/blockindex/nativestaking/stakingindexpb";

message bucketList {
    uint64 maxBucket = 1;
    repeated uint64 deleted  = 2;
}

message candList {
    repeated bytes id = 1;
}
